--- a/_config.yml
+++ b/_config.yml
@@ -1,221 +1,7 @@
 markdown: kramdown
 issues:
 - issue: accepted
-  articles:
-  - title: 'multipleNCC: Inverse probability weighting of nested case-control data'
-    slug: stoer-samuelsen
-    author:
-    - Nathalie C. Stoer
-    - Sven Ove Samuelsen
-  - title: Geographic visualization and analysis in R with tigris
-    slug: walker
-    author: Kyle Walker
-  - title: 'QPot: An R Package for Stochastic Differential Equation Quasi-Potential
-      Analysis'
-    slug: moore-stieha-nolting-etal
-    author:
-    - Christopher M. Moore
-    - Christopher R. Stieha
-    - Ben C. Nolting
-    - Maria K. Cameron
-    - Karen C. Abbott
-  - title: 'Simulating Correlated Binary and Multinomial Responses under Marginal
-      Model Specification: The SimCorMultRes Package'
-    slug: touloumis
-    author: Anestis Touloumis
-  - title: Two-Tier Latent Class IRT Models in R
-    slug: bacci-bartolucci
-    author:
-    - Silvia Bacci
-    - Francesco Bartolucci
-  - title: 'Subgroup Discovery with Evolutionary Fuzzy Systems in R: the SDEFSR Package'
-    slug: na-charte-na-etal
-    author:
-    - Ángel M. García
-    - Francisco Charte
-    - Pedro González
-    - Cristóbal J. Carmona
-    - María J. del Jesús
-  - title: 'Distance Measures for Time Series in R: the TSdist Package'
-    slug: mori-mori-mendiburu-etal
-    author:
-    - Usue Mori
-    - Usue Mori
-    - Alexander Mendiburu
-    - Jose A. Lozano
-  - title: 'eiCompare: Comparing ecological inference estimates across EI and EI:RxC'
-    slug: collingwood-oskooii-garciarios-etal
-    author:
-    - Loren Collingwood
-    - Kassra Oskooii
-    - Sergio Garcia-Rios
-    - Matt Barreto
-  - title: 'hdm: High-Dimensional Metrics'
-    slug: spindler-chernozhukov-hansen
-    author:
-    - Martin Spindler
-    - Victor Chernozhukov
-    - Chris Hansen
-  - title: 'ggfortify: Unified Interface to Visualize Statistical Result of Popular
-      R Packages'
-    slug: tang-horikoshi-li
-    author:
-    - Yuan Tang
-    - Masaaki Horikoshi
-    - Wenxuan Li
-  - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
-    slug: zhu-chen
-    author:
-    - Xiangwei Zhu
-    - Jianyi Chen
-  - title: Calculating Biological Module Enrichment or Depletion and Visualizing Data
-      on Large-scale Molecular Maps with ACSNMineR and RNaviCell packages
-    slug: deveau-barillot-boeva-etal
-    author:
-    - Paul Deveau
-    - Emmanuel Barillot
-    - Valentina Boeva
-    - Andrei Zinovyev
-    - Eric Bonnet
-  - title: 'dCovTS: Distance Covariance/Correlation for Time Series'
-    slug: pitsillou-fokianos
-    author:
-    - Maria Pitsillou
-    - Konstantinos Fokianos
-  - title: Variants of Simple Correspondence Analysis
-    slug: lombardo-beh
-    author:
-    - Rosaria Lombardo
-    - Eric J. Beh
-  - title: Design of the TRONCO BioConductor Package for TRanslational ONCOlogy
-    slug: ramazzotti-antoniotti-caravagna-etal
-    author:
-    - Daniele Ramazzotti
-    - Marco Antoniotti
-    - Giulio Caravagna
-    - Luca De Sano
-    - Alex Graudenzi
-    - Giancarlo Mauri
-    - Bud Mishra
-  - title: 'comf: An R Package for Thermal Comfort Studies'
-    slug: schweiker
-    author: Marcel Schweiker
-  - title: 'Escape from Boxland: Generating a Library of High-Dimensional Geometric
-      Shapes'
-    slug: schloerke-wickham-cook-etal
-    author:
-    - Barret Schloerke
-    - Hadley Wickham
-    - Dianne Cook
-    - and Heike Hofmann
-  - title: An Introduction to Principal Surrogate Evaluation with the pseval Package
-    slug: sachs-gabriel
-    author:
-    - Michael C Sachs
-    - Erin E Gabriel
-  - title: 'micompr: An R Package for Multivariate Independent Comparison of Observations'
-    slug: fachada-rodrigues-lopes-etal
-    author:
-    - Nuno Fachada
-    - João Rodrigues
-    - Vitor V. Lopes
-    - Rui C. Martins
-    - Agostinho C. Rosa
-  - title: 'nmfgpu4R: GPU-Accelerated Computation of the Non-Negative Matrix Factorization
-      (NMF) Using CUDA Capable Hardware'
-    slug: koitka-friedrich
-    author:
-    - Sven Koitka
-    - Christoph M. Friedrich
-  - title: 'quantreg.nonpar: An R Package for Performing Nonparametric Series Quantile
-      Regression'
-    slug: lipsitz-belloni-chernozhukov-etal
-    author:
-    - Michael Lipsitz
-    - Alexandre Belloni
-    - Victor Chernozhukov
-    - Ivan Fernandez-Val
-  - title: 'Qtools: A Collection of Models and Tools for Quantile Inference'
-    slug: geraci
-    author: Marco Geraci
-  - title: 'mctest: An R Package for Detection of Collinearity Among Regressors'
-    slug: imdadullah-aslam-altaf
-    author:
-    - Muhammad Imdadullah
-    - Muhammad Aslam
-    - Saima Altaf
-  - title: 'Ake: An R Package for Discrete and Continuous Associated Kernel Estimations'
-    slug: some-wansouwe-kokonendji
-    author:
-    - Sobom M. Somé
-    - Wanbitching E. Wansouwé
-    - Célestin C. Kokonendji
-  - title: Measurement units in R
-    slug: pebesma-mailund-hiebert
-    author:
-    - Edzer Pebesma
-    - Thomas Mailund
-    - James Hiebert
-  - title: 'diverse: an R Package to Measure Diversity in Complex Systems'
-    slug: guevara-hartmann-mendoza
-    author:
-    - Miguel R. Guevara
-    - Dominik Hartmann
-    - Marcelo Mendoza
-  - title: 'water: Tools and Functions to estimate Actual Evapotranspiration using
-      Land Surface Energy Balance Models in R'
-    slug: olmedo-ortegafarias-delafuentesaiz-etal
-    author:
-    - Guillermo Federico Olmedo
-    - Samuel Ortega-Farías
-    - Daniel de la Fuente-Sáiz
-    - David Fonseca-Luengo
-    - Fernando Fuentes-Peñailillo
-  - title: 'easyROC: An Interactive Web-tool for ROC Curve Analysis Using R Language
-      Environment'
-    slug: goksuluk-korkmaz-zararsiz-etal
-    author:
-    - Dincer Goksuluk
-    - Selcuk Korkmaz
-    - Gokmen Zararsiz
-    - Ergun Karaagaoglu
-  - title: 'QPot: An R Package for Stochastic Differential Equation Quasi-Potential
-      Analysis'
-    slug: moore-stieha-nolting-etal
-    author: ' "Christopher M. Moore"'
-  - title: Normal Tolerance Interval Procedures in the tolerance Package
-    slug: young
-    author: Derek Young
-  - title: 'RNRFA: an R package to retrieve, filter and visualize data from the UK
-      National River Flow Archive'
-    slug: vitolo-fry-buytaert
-    author:
-    - Claudia Vitolo
-    - Matthew Fry
-    - Wouter Buytaert
-  - title: 'condSURV: An R Package for the Estimation of the Conditional Survival
-      Function for Ordered Multivariate Failure Time Data'
-    slug: meiramachado-sestelo
-    author:
-    - Luis Meira-Machado
-    - Marta Sestelo
-  - title: Computing Pareto Frontiers and Database Preferences with the rPref Package
-    slug: roocks
-    author: Patrick Roocks
-  - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
-    slug: sola-irigoien-mestres-etal
-    author:
-    - Concepcion Arenas Sola
-    - Itziar Irigoien
-    - Francesc Mestres
-    - Concepción Arenas
-  - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
-    slug: sola-irigoien-mestres-etal
-    author:
-    - Concepcion Arenas Sola
-    - Itziar Irigoien
-    - Francesc Mestres
-    - Concepción Arenas
+  articles: []
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -2923,4 +2709,418 @@ issues:
     pages:
     - 406
     - 415
+- issue: 2016-2
+  year: 2016
+  volume: 8
+  num: 2
+  month: December
+  bibmonth: december
+  articles:
+  - title: Editorial
+    author: Michael Lawrence
+    slug: editorial
+    pages:
+    - 4
+    - 4
+  - heading: Contributed Research Articles
+  - title: 'multipleNCC: Inverse probability weighting of nested case-control data'
+    author:
+    - Nathalie C. Stoer
+    - Sven Ove Samuelsen
+    slug: stoer-samuelsen
+    bibtitle: '{multipleNCC}: Inverse probability weighting of nested case-control
+      {data}'
+    pages:
+    - 5
+    - 18
+  - title: 'QPot: An R Package for Stochastic Differential Equation Quasi-Potential
+      Analysis'
+    author:
+    - Christopher M. Moore
+    - Christopher R. Stieha
+    - Ben C. Nolting
+    - Maria K. Cameron
+    - Karen C. Abbott
+    slug: moore-stieha-nolting-etal
+    bibtitle: '{QPot}: An {R} Package for Stochastic Differential Equation Quasi-Potential
+      Analysis'
+    pages:
+    - 19
+    - 38
+  - title: Design of the TRONCO BioConductor Package for TRanslational ONCOlogy
+    author:
+    - Daniele Ramazzotti
+    - Marco Antoniotti
+    - Giulio Caravagna
+    - Luca De Sano
+    - Alex Graudenzi
+    - Giancarlo Mauri
+    - Bud Mishra
+    slug: ramazzotti-antoniotti-caravagna-etal
+    bibtitle: Design of the {TRONCO} {BioConductor} Package for {TRanslational} {ONCOlogy}
+    pages:
+    - 39
+    - 59
+  - title: 'diverse: an R Package to Measure Diversity in Complex Systems'
+    author:
+    - Miguel R. Guevara
+    - Dominik Hartmann
+    - Marcelo Mendoza
+    slug: guevara-hartmann-mendoza
+    bibtitle: '{diverse}: an {R} Package to Measure Diversity in Complex Systems'
+    pages:
+    - 60
+    - 78
+  - title: 'Simulating Correlated Binary and Multinomial Responses under Marginal
+      Model Specification: The SimCorMultRes Package'
+    author: Anestis Touloumis
+    slug: touloumis
+    bibtitle: 'Simulating Correlated Binary and Multinomial Responses under Marginal
+      Model Specification: The {SimCorMultRes} Package'
+    pages:
+    - 79
+    - 91
+  - title: 'eiCompare: Comparing ecological inference estimates across EI and EI:RxC'
+    author:
+    - Loren Collingwood
+    - Kassra Oskooii
+    - Sergio Garcia-Rios
+    - Matt Barreto
+    slug: collingwood-oskooii-garciarios-etal
+    bibtitle: '{eiCompare}: Comparing ecological inference estimates across {EI} and
+      {EI}:{RxC}'
+    pages:
+    - 92
+    - 101
+  - title: 'RNRFA: an R package to retrieve, filter and visualize data from the UK
+      National River Flow Archive'
+    author:
+    - Claudia Vitolo
+    - Matthew Fry
+    - Wouter Buytaert
+    slug: vitolo-fry-buytaert
+    bibtitle: '{RNRFA}: an {R} package to retrieve, filter and visualize data from
+      the {UK} National River Flow Archive'
+    pages:
+    - 102
+    - 116
+  - title: 'Qtools: A Collection of Models and Tools for Quantile Inference'
+    author: Marco Geraci
+    slug: geraci
+    bibtitle: 'Qtools: {A} Collection of Models and Tools for Quantile Inference'
+    pages:
+    - 117
+    - 138
+  - title: Two-Tier Latent Class IRT Models in R
+    author:
+    - Silvia Bacci
+    - Francesco Bartolucci
+    slug: bacci-bartolucci
+    bibtitle: Two-Tier Latent Class {IRT} Models in {R}
+    pages:
+    - 139
+    - 166
+  - title: Variants of Simple Correspondence Analysis
+    author:
+    - Rosaria Lombardo
+    - Eric J. Beh
+    slug: lombardo-beh
+    pages:
+    - 167
+    - 184
+  - title: 'hdm: High-Dimensional Metrics'
+    author:
+    - Martin Spindler
+    - Victor Chernozhukov
+    - Chris Hansen
+    slug: spindler-chernozhukov-hansen
+    bibtitle: '{hdm}: High-Dimensional Metrics'
+    pages:
+    - 185
+    - 199
+  - title: Normal Tolerance Interval Procedures in the tolerance Package
+    author: Derek Young
+    slug: young
+    pages:
+    - 200
+    - 212
+  - title: 'easyROC: An Interactive Web-tool for ROC Curve Analysis Using R Language
+      Environment'
+    author:
+    - Dincer Goksuluk
+    - Selcuk Korkmaz
+    - Gokmen Zararsiz
+    - Ergun Karaagaoglu
+    slug: goksuluk-korkmaz-zararsiz-etal
+    bibtitle: '{easyROC}: An Interactive Web-tool for {ROC} Curve Analysis Using {R}
+      Language Environment'
+    pages:
+    - 213
+    - 230
+  - title: 'tigris: An R Package to Access and Work with Geographic Data from the
+      US Census Bureau'
+    author: Kyle Walker
+    slug: walker
+    bibtitle: '{tigris}: An {R} Package to Access and Work with Geographic Data from
+      the {US} Census Bureau'
+    pages:
+    - 231
+    - 242
+  - title: 'Escape from Boxland: Generating a Library of High-Dimensional Geometric
+      Shapes'
+    author:
+    - Barret Schloerke
+    - Hadley Wickham
+    - Dianne Cook
+    - and Heike Hofmann
+    slug: schloerke-wickham-cook-etal
+    pages:
+    - 243
+    - 257
+  - title: 'Ake: An R Package for Discrete and Continuous Associated Kernel Estimations'
+    author:
+    - Sobom M. Somé
+    - Wanbitching E. Wansouwé
+    - Célestin C. Kokonendji
+    slug: some-wansouwe-kokonendji
+    bibtitle: 'Ake: An {R} Package for Discrete and Continuous Associated Kernel Estimations'
+    bibauthor:
+    - Sobom M. Som{\' e}
+    - Wanbitching E. Wansouw{\' e}
+    - C{\' e}lestin C. Kokonendji
+    pages:
+    - 258
+    - 276
+  - title: An Introduction to Principal Surrogate Evaluation with the pseval Package
+    author:
+    - Michael C Sachs
+    - Erin E Gabriel
+    slug: sachs-gabriel
+    pages:
+    - 277
+    - 292
+  - title: Calculating Biological Module Enrichment or Depletion and Visualizing Data
+      on Large-scale Molecular Maps with ACSNMineR and RNaviCell packages
+    author:
+    - Paul Deveau
+    - Emmanuel Barillot
+    - Valentina Boeva
+    - Andrei Zinovyev
+    - Eric Bonnet
+    slug: deveau-barillot-boeva-etal
+    bibtitle: Calculating Biological Module Enrichment or Depletion and Visualizing
+      Data on Large-scale Molecular Maps with {ACSNMineR} and {RNaviCell} {packages}
+    pages:
+    - 293
+    - 306
+  - title: 'Subgroup Discovery with Evolutionary Fuzzy Systems in R: the SDEFSR Package'
+    author:
+    - Ángel M. García
+    - Francisco Charte
+    - Pedro González
+    - Cristóbal J. Carmona
+    - María J. del Jesús
+    slug: na-charte-na-etal
+    bibtitle: 'Subgroup Discovery with Evolutionary Fuzzy Systems in {R}: the {SDEFSR}
+      Package'
+    bibauthor:
+    - Ángel M. Garc{\' i}a
+    - Francisco Charte
+    - Pedro Gonz{\' a}lez
+    - Crist{\' o}bal J. Carmona
+    - Mar{\' i}a J. del Jesús
+    pages:
+    - 307
+    - 323
+  - title: 'dCovTS: Distance Covariance/Correlation for Time Series'
+    author:
+    - Maria Pitsillou
+    - Konstantinos Fokianos
+    slug: pitsillou-fokianos
+    bibtitle: '{dCovTS}: Distance Covariance/Correlation for Time Series'
+    pages:
+    - 324
+    - 340
+  - title: 'comf: An R Package for Thermal Comfort Studies'
+    author: Marcel Schweiker
+    slug: schweiker
+    bibtitle: '{comf}: An {R} Package for Thermal Comfort Studies'
+    pages:
+    - 341
+    - 351
+  - title: 'water: Tools and Functions to estimate Actual Evapotranspiration using
+      Land Surface Energy Balance Models in R'
+    author:
+    - Guillermo Federico Olmedo
+    - Samuel Ortega-Farías
+    - Daniel de la Fuente-Sáiz
+    - David Fonseca-Luengo
+    - Fernando Fuentes-Peñailillo
+    slug: olmedo-ortegafarias-delafuentesaiz-etal
+    bibtitle: '{water}: Tools and Functions to estimate Actual Evapotranspiration
+      using Land Surface Energy Balance Models in {R}'
+    bibauthor:
+    - Guillermo Federico Olmedo
+    - Samuel Ortega-Far{\' i}as
+    - Daniel de la Fuente-S{\' a}iz
+    - David Fonseca-Luengo
+    - Fernando Fuentes-Pe{\~ n}ailillo
+    pages:
+    - 352
+    - 370
+  - title: 'quantreg.nonpar: An R Package for Performing Nonparametric Series Quantile
+      Regression'
+    author:
+    - Michael Lipsitz
+    - Alexandre Belloni
+    - Victor Chernozhukov
+    - Ivan Fernandez-Val
+    slug: lipsitz-belloni-chernozhukov-etal
+    bibtitle: '{quantreg.nonpar}: An {R} Package for Performing Nonparametric Series
+      Quantile Regression'
+    pages:
+    - 371
+    - 382
+  - title: 'nmfgpu4R: GPU-Accelerated Computation of the Non-Negative Matrix Factorization
+      (NMF) Using CUDA Capable Hardware'
+    author:
+    - Sven Koitka
+    - Christoph M. Friedrich
+    slug: koitka-friedrich
+    bibtitle: '{nmfgpu4R}: {GPU}-Accelerated Computation of the Non-Negative Matrix
+      Factorization ({NMF}) Using {CUDA} Capable Hardware'
+    pages:
+    - 383
+    - 393
+  - title: Computing Pareto Frontiers and Database Preferences with the rPref Package
+    author: Patrick Roocks
+    slug: roocks
+    bibtitle: Computing Pareto Frontiers and Database Preferences with the {rPref}
+      Package
+    pages:
+    - 394
+    - 405
+  - title: 'micompr: An R Package for Multivariate Independent Comparison of Observations'
+    author:
+    - Nuno Fachada
+    - João Rodrigues
+    - Vitor V. Lopes
+    - Rui C. Martins
+    - Agostinho C. Rosa
+    slug: fachada-rodrigues-lopes-etal
+    bibtitle: '{micompr}: An {R} Package for Multivariate Independent Comparison of
+      Observations'
+    pages:
+    - 406
+    - 421
+  - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
+    author:
+    - Xiangwei Zhu
+    - Jianyi Chen
+    slug: zhu-chen
+    bibtitle: '{mixtox}: An {R} Package for Mixture Toxicity Assessment'
+    pages:
+    - 422
+    - 434
+  - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
+    author:
+    - Concepcion Arenas Sola
+    - Itziar Irigoien
+    - Francesc Mestres
+    - Concepción Arenas
+    slug: sola-irigoien-mestres-etal
+    bibtitle: 'Weighted Distance Based Discriminant Analysis: The {R} package  {WeDiBaDis}'
+    bibauthor:
+    - Concepcion Arenas Sola
+    - Itziar Irigoien
+    - Francesc Mestres
+    - Concepci{\' o}n Arenas
+    pages:
+    - 435
+    - 454
+  - title: 'Distance Measures for Time Series in R: the TSdist Package'
+    author:
+    - Usue Mori
+    - Usue Mori
+    - Alexander Mendiburu
+    - Jose A. Lozano
+    slug: mori-mori-mendiburu-etal
+    bibtitle: 'Distance Measures for Time Series in {R}: the {TSdist} Package'
+    pages:
+    - 455
+    - 463
+  - title: 'condSURV: An R Package for the Estimation of the Conditional Survival
+      Function for Ordered Multivariate Failure Time Data'
+    author:
+    - Luis Meira-Machado
+    - Marta Sestelo
+    slug: meiramachado-sestelo
+    bibtitle: '{condSURV}: An {R} Package for the Estimation of the Conditional Survival
+      Function for Ordered Multivariate Failure Time Data'
+    pages:
+    - 464
+    - 477
+  - title: 'ggfortify: Unified Interface to Visualize Statistical Result of Popular
+      R Packages'
+    author:
+    - Yuan Tang
+    - Masaaki Horikoshi
+    - Wenxuan Li
+    slug: tang-horikoshi-li
+    bibtitle: '{ggfortify}: Unified Interface to Visualize Statistical Result of Popular
+      {R} Packages'
+    pages:
+    - 478
+    - 489
+  - title: Measurement units in R
+    author:
+    - Edzer Pebesma
+    - Thomas Mailund
+    - James Hiebert
+    slug: pebesma-mailund-hiebert
+    bibtitle: Measurement units in {R}
+    pages:
+    - 490
+    - 498
+  - title: 'mctest: An R Package for Detection of Collinearity Among Regressors'
+    author:
+    - Muhammad Imdadullah
+    - Muhammad Aslam
+    - Saima Altaf
+    slug: imdadullah-aslam-altaf
+    bibtitle: '{mctest}: An {R} Package for Detection of Collinearity Among Regressors'
+    pages:
+    - 499
+    - 509
+  - heading: News and Notes
+  - title: News from the Bioconductor Project
+    author: by Bioconductor Core Team
+    slug: bioc
+    bibauthor: by Bioconductor Core Team
+    pages:
+    - 510
+    - 510
+  - title: Changes in R
+    author: by the R Core Team
+    slug: ch
+    bibtitle: Changes in {R}
+    bibauthor: by the R Core Team
+    pages:
+    - 511
+    - 513
+  - title: Changes on CRAN
+    author: by Kurt Hornik and Achim Zeileis
+    slug: cran
+    bibtitle: Changes on {CRAN}
+    bibauthor: by Kurt Hornik and Achim Zeileis
+    pages:
+    - 514
+    - 514
+  - title: R Foundation News
+    author: by Torsten Hothorn
+    slug: foundation
+    bibauthor: by Torsten Hothorn
+    pages:
+    - 515
+    - 518
 
