--- a/_config.yml
+++ b/_config.yml
@@ -2913,7 +2913,7 @@ issues:
     pages:
     - 293
     - 306
-  - title: 'Subgroup Discovery with Evolutionary Fuzzy Systems in R: the SDEFSR Package'
+  - title: 'Subgroup Discovery with Evolutionary Fuzzy Systems in R: The SDEFSR Package'
     author:
     - Ángel M. García
     - Francisco Charte
@@ -2921,7 +2921,7 @@ issues:
     - Cristóbal J. Carmona
     - María J. del Jesús
     slug: na-charte-na-etal
-    bibtitle: 'Subgroup Discovery with Evolutionary Fuzzy Systems in {R}: the {SDEFSR}
+    bibtitle: 'Subgroup Discovery with Evolutionary Fuzzy Systems in {R}: The {SDEFSR}
       Package'
     bibauthor:
     - Ángel M. Garc{\' i}a
@@ -2967,7 +2967,7 @@ issues:
     - Fernando Fuentes-Pe{\~ n}ailillo
     pages:
     - 352
-    - 370
+    - 369
   - title: 'quantreg.nonpar: An R Package for Performing Nonparametric Series Quantile
       Regression'
     author:
@@ -2979,8 +2979,8 @@ issues:
     bibtitle: '{quantreg.nonpar}: An {R} Package for Performing Nonparametric Series
       Quantile Regression'
     pages:
-    - 371
-    - 382
+    - 370
+    - 381
   - title: 'nmfgpu4R: GPU-Accelerated Computation of the Non-Negative Matrix Factorization
       (NMF) Using CUDA Capable Hardware'
     author:
@@ -2990,16 +2990,16 @@ issues:
     bibtitle: '{nmfgpu4R}: {GPU}-Accelerated Computation of the Non-Negative Matrix
       Factorization ({NMF}) Using {CUDA} Capable Hardware'
     pages:
-    - 383
-    - 393
+    - 382
+    - 392
   - title: Computing Pareto Frontiers and Database Preferences with the rPref Package
     author: Patrick Roocks
     slug: roocks
     bibtitle: Computing Pareto Frontiers and Database Preferences with the {rPref}
       Package
     pages:
-    - 394
-    - 405
+    - 393
+    - 404
   - title: 'micompr: An R Package for Multivariate Independent Comparison of Observations'
     author:
     - Nuno Fachada
@@ -3011,8 +3011,8 @@ issues:
     bibtitle: '{micompr}: An {R} Package for Multivariate Independent Comparison of
       Observations'
     pages:
-    - 406
-    - 421
+    - 405
+    - 420
   - title: 'mixtox: An R Package for Mixture Toxicity Assessment'
     author:
     - Xiangwei Zhu
@@ -3020,8 +3020,8 @@ issues:
     slug: zhu-chen
     bibtitle: '{mixtox}: An {R} Package for Mixture Toxicity Assessment'
     pages:
-    - 422
-    - 434
+    - 421
+    - 433
   - title: 'Weighted Distance Based Discriminant Analysis: The R package  WeDiBaDis'
     author:
     - Concepcion Arenas Sola
@@ -3036,19 +3036,19 @@ issues:
     - Francesc Mestres
     - Concepci{\' o}n Arenas
     pages:
-    - 435
-    - 454
-  - title: 'Distance Measures for Time Series in R: the TSdist Package'
+    - 434
+    - 450
+  - title: 'Distance Measures for Time Series in R: The TSdist Package'
     author:
     - Usue Mori
     - Usue Mori
     - Alexander Mendiburu
     - Jose A. Lozano
     slug: mori-mori-mendiburu-etal
-    bibtitle: 'Distance Measures for Time Series in {R}: the {TSdist} Package'
+    bibtitle: 'Distance Measures for Time Series in {R}: The {TSdist} Package'
     pages:
-    - 455
-    - 463
+    - 451
+    - 459
   - title: 'condSURV: An R Package for the Estimation of the Conditional Survival
       Function for Ordered Multivariate Failure Time Data'
     author:
@@ -3058,8 +3058,8 @@ issues:
     bibtitle: '{condSURV}: An {R} Package for the Estimation of the Conditional Survival
       Function for Ordered Multivariate Failure Time Data'
     pages:
-    - 464
-    - 477
+    - 460
+    - 473
   - title: 'ggfortify: Unified Interface to Visualize Statistical Result of Popular
       R Packages'
     author:
@@ -3070,18 +3070,18 @@ issues:
     bibtitle: '{ggfortify}: Unified Interface to Visualize Statistical Result of Popular
       {R} Packages'
     pages:
-    - 478
-    - 489
-  - title: Measurement units in R
+    - 474
+    - 485
+  - title: Measurement Units in R
     author:
     - Edzer Pebesma
     - Thomas Mailund
     - James Hiebert
     slug: pebesma-mailund-hiebert
-    bibtitle: Measurement units in {R}
+    bibtitle: Measurement Units in {R}
     pages:
-    - 490
-    - 498
+    - 486
+    - 494
   - title: 'mctest: An R Package for Detection of Collinearity Among Regressors'
     author:
     - Muhammad Imdadullah
@@ -3090,9 +3090,24 @@ issues:
     slug: imdadullah-aslam-altaf
     bibtitle: '{mctest}: An {R} Package for Detection of Collinearity Among Regressors'
     pages:
-    - 499
-    - 509
+    - 495
+    - 505
   - heading: News and Notes
+  - title: R Foundation News
+    author: by Torsten Hothorn
+    slug: foundation
+    bibauthor: by Torsten Hothorn
+    pages:
+    - 506
+    - 506
+  - title: Changes on CRAN
+    author: by Kurt Hornik and Achim Zeileis
+    slug: cran
+    bibtitle: Changes on {CRAN}
+    bibauthor: by Kurt Hornik and Achim Zeileis
+    pages:
+    - 507
+    - 509
   - title: News from the Bioconductor Project
     author: by Bioconductor Core Team
     slug: bioc
@@ -3107,20 +3122,5 @@ issues:
     bibauthor: by the R Core Team
     pages:
     - 511
-    - 513
-  - title: Changes on CRAN
-    author: by Kurt Hornik and Achim Zeileis
-    slug: cran
-    bibtitle: Changes on {CRAN}
-    bibauthor: by Kurt Hornik and Achim Zeileis
-    pages:
     - 514
-    - 514
-  - title: R Foundation News
-    author: by Torsten Hothorn
-    slug: foundation
-    bibauthor: by Torsten Hothorn
-    pages:
-    - 515
-    - 518
 
