--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,86 @@
 markdown: kramdown
 issues:
 - issue: accepted
-  articles: []
+  articles:
+  - title: 'OrthoPanels: An R Package for Estimating a Dynamic Panel Model with Fixed
+      Effects Using the Orthogonal Re-parameterization Approach'
+    slug: pickup-gustafson-cubranic-etal
+    author:
+    - Mark Pickup
+    - Paul Gustafson
+    - Davor Cubranic
+    - Geoffrey Evans
+  - title: 'smoof: Single- and Multi-Objective Optimization Test Functions'
+    slug: bossek
+    author: Jakob Bossek
+  - title: 'alineR: an R package for optimizing feature-weighted alignments and linguistic
+      distances'
+    slug: downey-downey-sun-etal
+    author:
+    - Sean Downey
+    - Sean S. Downey
+    - Guowei Sun
+    - Peter Norquest
+  - title: Implementing a Disaggregated Bass Diffusion Model using the R Package deSolve
+    slug: duggan
+    author: Jim Duggan
+  - title: 'On some extensions to GA package: hybrid optimisation, parallelisation
+      and islands evolution'
+    slug: scrucca
+    author: Luca Scrucca
+  - title: 'imputeTS: Time Series Missing Value Imputation in R'
+    slug: moritz-bartzbeielstein
+    author:
+    - Steffen Moritz
+    - Thomas Bartz-Beielstein
+  - title: Update of the nlme Package to Allow a Fixed Standard Deviation of the Residual
+      Error
+    slug: heisterkamp-vanwilligen-diderichsen-etal
+    author:
+    - Simon Heisterkamp
+    - Engelbertus van Willigen
+    - Paul-Matthias Diderichsen
+    - John Maringwa
+  - title: Multilabel Classification with R Package mlr
+    slug: probst-probst-au-etal
+    author:
+    - Philipp Probst
+    - Philipp Probst
+    - Quay Au
+    - Giuseppe Casalicchio
+    - Clemens Stachl
+    - Bernd Bischl
+  - title: 'milr: Multiple-Instance Logistic Regression with LASSO penalty'
+    slug: chen-chen-yang-etal
+    author:
+    - Ping-Yang Chen
+    - Ching-Chuan Chen
+    - Chun-Hao Yang
+    - Sheng-Mao Chang
+    - Kuo-Jung Lee
+  - title: 'spcadjust: An R Package for Adjusting for Estimation Error in Control
+      Charts'
+    slug: gandy-kvaloy
+    author:
+    - Axel Gandy
+    - Jan Terje Kvaløy
+  - title: 'spcadjust: An R Package for Adjusting for Estimation Error in Control
+      Charts'
+    slug: gandy-kvaloy
+    author:
+    - Axel Gandy
+    - Jan Terje Kvaløy
+  - title: 'pdp: An R Package for Constructing Partial Dependence Plots'
+    slug: greenwell
+    author: Brandon Greenwell
+  - title: 'GsymPoint: An R package to Estimate the Generalized Symmetry Point, an
+      Optimal Cut-off Point for Binary Classification in Continuous Diagnostic Tests'
+    slug: lopezraton-mmolaneslopez-leton-etal
+    author:
+    - Mónica López-Ratón
+    - Elisa M.Molanes-López
+    - Emilio Letón
+    - Carmen Cadarso-Suárez
 - issue: 2009-1
   year: 2009
   volume: 1
